# qoa

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  crash.txt  fusion-sim-pre.qexe  fusion-sim.qexe  hello.qexe  test.qexe  todo.md
.cargo/: config.toml
benches/: benchmark.rs
changelog/: # QOA v0.2.8.md  QOA v0.2.0.md  QOA v0.2.2.md  QOA v0.2.3 IEEE 754 compliance Patch.md   QOA v0.2.3.md  QOA v0.2.4.md  QOA v0.2.5.md  QOA v0.2.6.md  QOA v0.2.7.md  QOA v0.2.9.md  QOA v0.3.0.md  QOA v0.3.1.md  QOA v0.3.2.md  QOA v0.3.3.md  QOA v0.3.4.md  QOA v0.3.5.md  QOA-v0.2.3-IEEE-754-compliance-Patch.md
emulator/: main_emulator.rs
images/: qoa-logo-simple.xcf  qoa-logo.xcf
ionq/: fusion-sim-0.2.2.json  fusion-sim-0.3.json  qoa-teleport-25q-IonQ-compatible.json  teleport-25q-IonQ-compatible.json  teleport-25q.json  teleport-test-qoa.json  teleport.json  test.json
main/: Cargo.toml  loop.qexe  main.rs
main/examples/: hello_world.qoa
main/qoa/: Cargo.toml
main/qoa/src/: explanation.txt  main.rs
qoa_binaries/: aes-22.qx  aes-decryption-16.qx  aes-decryption.qx  aes.qx  fusion-sim-0.2.qexe  fusion-sim-fix.qexe  fusion.qx  hello-world.qx  hello.qx  hello_world.qexe  light.oexe  ons.oexe  pong.qexe  teleport.qexe  teleport.qx  test.qexe
qoa_files/: aes-decryption-16.qoa  aes-decryption-22.qoa  aes-decryption.qoa  fusion-sim-0.2.2.qoa  fusion-sim-0.2.4.qoa  fusion-sim-0.2.6.qoa  fusion-sim-0.2.qoa  fusion-sim-pre.qoa  fusion-sim.qoa  grover.qoa  hello_world.qoa  light.qoa  loop.qoa  ons.qoa  rsa-decryption.qoa  shor.qoa  teleport-25q-IonQ-compatible.qoa  teleport.qoa  test.qoa
readme/: HOW TO SUBMIT JSON COMPILED QOA TO IONQ.md  QOA-system-requirements.md  QOA_paper.odt  test-run.md   todo.md
scripts/: benchmark.ps1  benchmark.sh  build-debug.sh  build.sh  clean.sh  test.sh
scripts/unix/: benchmark.sh  build-debug.sh  build.sh  clean.sh  test.sh  update.sh
scripts/windows/: benchmark.ps1  build-debug.ps1  build.ps1  clean.ps1  test.ps1  update.ps1
src/: binding.rs  distribute.rs  instructions.rs  lib.rs  main.rs  node.rs  noise.rs  random.rs  runtime.rs  test.rs  vectorization.rs  visualizer.rs  vulkan.rs
src/asm/aarch64/: main.S  q-ext.S
src/asm/power/: main.S  q-ext.S
src/asm/power64/: main.S
src/asm/riscv64/: main.S  q-ext.S
src/asm/x86-64/: main.S  q-ext.S
src/emulator/: main_emulator.rs
src/gpu/: gpu_accelerator.rs  spirv.rs
src/gpu/shaders/: cnot.comp  cnot.spv  compare_spirv.sh  dump_spirv  dump_spirv.rs  dumped.spv  hadamard.comp  hadamard_original.hex  paulix.spv  pauliz.comp  pauliz.spv  rx.spv  ry.comp  ry.spv  rz.comp  rz.spv  s.comp  s.spv  swap.comp  swap.spv  t.comp  t.spv  tensor.comp
src/kernel/: compute_shader.rs  gpu_accelerator.rs  spirv.rs
src/kernel/shaders/: hadamard.comp  paulix.comp  rx.comp
src/runtime/: mod.rs  quantum_state.rs  runtime.rs
verification/: README.md  build.rs
verification/scripts/: build.sh  spirv.sh  vulkan-sdk.sh
verification/spirv/: cnot.hlsl  cnot.metal  cnot_cfg.dot  cnot_debug.spvasm  cnot_opt.spvasm  cnot_reflect.txt  cnot_stats.txt  hadamard.hlsl  hadamard.metal  hadamard_cfg.dot  hadamard_debug.spvasm  hadamard_disasm.txt  hadamard_opt.spvasm  hadamard_reflect.txt  hadamard_stats.txt  paulix.hlsl  paulix.metal  paulix.spvasm  paulix_cfg.dot  paulix_debug.spvasm  paulix_reflect.txt  paulix_stats.txt  pauliz.hlsl  pauliz.metal  pauliz.spvasm  pauliz_cfg.dot  pauliz_debug.spvasm  pauliz_reflect.txt  pauliz_stats.txt  rx.hlsl  rx.metal  rx.spvasm  rx_cfg.dot  rx_debug.spvasm  rx_reflect.txt  rx_stats.txt  ry.hlsl  ry.metal  ry.spvasm  ry_debug.spvasm  (+36 more)
verification/src/asm/aarch64/: main.S
verification/src/asm/power64/: main.S
verification/src/asm/riscv64/: main.S
