# Cargo.toml

cargo-features = ["profile-rustflags"]
# ONLY IN NIGHTLY

[package]
name = "qoa"
version = "0.3.2"
edition = "2024"
authors = ["GitHub: @planetryan"]
description = "The Quantum Optical Assembly Language"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = { version = "0.4", features = ["serde"] }
rand = "0.9"
rand_distr = "0.5"
log = "0.4"
env_logger = "0.11"
image = "0.25" # for saving rendered frames
duct = "1.0"
hound = "3.5"
ndarray = { version = "0.16", features = ["rayon"] }
realfft = "3.5"
rustfft = "6.4"
rayon = "1.10"
indicatif = { version = "0.18", features = ["rayon"] }
rand_chacha = "0.9"
itertools = "0.14"
jemallocator = "0.5"
approx = { version = "0.5", features = ["num-complex"] }
num_cpus = "1.16"
tempfile = "3.10"
core_affinity = "0.8"
bumpalo = { version = "3.19.0", features = ["collections"] }
bincode = "1.3" # for inter-node communication serialization

# gpu support features
ash = { version = "0.37.0", features = ["linked"], optional = true } # for vulkan api
cudarc = { version = "0.12", optional = true }
opencl3 = { version = "0.9", optional = true }
# mpi support
mpi = { version = "0.6", optional = true } # for mpi communication, optional

# COMPILER OPTIMIZATIONS
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
parking_lot = "0.12"
memmap2 = "0.9"
dashmap = "5.5"
criterion = "0.5" # for benchmarking

[build-dependencies]
# cc = "1.0"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
rpath = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false

[dev-dependencies]
criterion = "0.5" # for benchmarking
proptest = "1.4"

[features]
default = []
cuda = ["cudarc"]
opencl = ["opencl3"]
vulkan = ["ash"]
mpi = ["dep:mpi"]
